[package]
name = "openai-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["json", "multipart", "gzip"]}
scraper = "0.15.0"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
tokio = {version = "1.18.2", features = ["rt-multi-thread", "parking_lot", "rt", "macros", "test-util"]}
url = "2.3.1"
urlencoding = "2.1.2"
async-openai = "0.14.3"
dotenv = "0.15.0"